dark mode plus bugs fix

--- a/src/assets/scss/_basic.scss
+++ b/src/assets/scss/_basic.scss
@@ -41,6 +41,25 @@ body {
     position: relative;
 }
 
+.tunes {
+    min-height: 100vh;
+
+    .circle-svg {
+        width: 12.5em;
+        margin-bottom: 2.5em;
+        fill: $page-color;
+        cursor: pointer;
+    }
+
+    .circle-svg:hover,
+    .circle-svg:focus {
+        fill: lighten($page-color, 5%);
+    }
+
+}
+
+
+
 /* DARK CHECKBOX */ 
 .dark-container {
     position: relative;
@@ -69,7 +88,7 @@ body {
             position: absolute;
             top: 0.2188rem;
             left: 0.4688rem;
-            background: linear-gradient(180deg, #ffcc89, #d8860b);
+            background: linear-gradient(180deg, #dbdbdb, #818181);
             border-radius: 11.25rem;
             box-shadow: 0rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
             transition: 0.3s;
@@ -103,7 +122,7 @@ body {
         label svg.sun {
             left: 13.5%;
             top: 19%;
-            fill: #fff;
+            fill: #ffffff;
             transition: 0.3s;
         }
     
@@ -188,6 +207,7 @@ aside {
 }
 
 .back-to {
+    cursor: pointer;
     display: flex;
     align-items: center;
     padding: {
@@ -199,7 +219,7 @@ aside {
     text-align: left;
     color: $bg-color-icon;
 
-    .img-back-to {
-        width: 25px;
+    svg {
+        width: 1.5625rem;
     }
 }
