--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -32,7 +32,7 @@ $dark-bg-color-icon: #f0f0f0;
 $dark-bg-color-page: #11161c;
 $dark-bg-header: #000713;
 
-$dark-border-color: #878787;
+$dark-border-color: #313e4e;
 $dark-hover-nav-color: #066899;
 $dark-color-page-btn-light: #066899;
 
