--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -34,74 +34,5 @@
 // ------ MEDIA ------ //
 @import "media.scss";
 
-
-/* treba toto este opravit :D */
-
-.theme-dark {
-    background: $dark-bg-color-page;
-
-    .project-view .project h2 {
-        color: $dark-page-color-sec;
-    }
-
-    .project-view .project h3 {
-        color: $dark-hover-nav-color;
-    }
-
-    .project-view .project p {
-        color: $dark-page-color;
-    }
-
-    h1,
-    h2,
-    a,
-    .home-view .about-me p,
-    .second-btn,
-    .footer-view .footer-shadow,
-    .footer-view {
-        color: $dark-page-color;
-    }
-
-    .footer-view {
-        background: $dark-bg-color-page;
-    }
-
-    .footer-view .footer-icons i,
-    .footer-view .footer-center i {
-        background: $dark-bg-color-icon;
-        color: $dark-bg-color-page;
-    }
-
-    .navigation-scss {
-        background-color: $dark-bg-header;
-
-        .navigation {
-            a {
-                color: $dark-page-color;
-            }
-        }
-    }
-
-    .contact-container {
-        form {
-            color: $dark-page-color;
-        }
-
-        .contact input,
-        .contact textarea {
-            color: $dark-page-color;
-            background-color: $dark-bg-color-page;
-            border: 2px solid $dark-bg-header;
-        }
-
-        .second-btn:hover,
-        .second-btn:focus {
-            background-color: #2180ac;
-            border-color: rgba(0, 0, 0, 0);
-        }
-
-        .leaflet-bar a {
-            color: black;
-        }
-    }
-}
+// ------ DARK ------ //
+@import "dark.scss";
